[gd_scene load_steps=5 format=3 uid="uid://u86wlwm1f20a"]

[ext_resource type="Script" uid="uid://b3unybjuugafi" path="res://Scripts/UI/dialogue_box.gd" id="1_35kh5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4rbby"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_cixbq"]
font_size = 64
font_color = Color(0, 0.407843, 0.407843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shr43"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_35kh5")

[node name="SpeakerBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.556
anchor_right = 0.349
anchor_bottom = 1.0
offset_top = -0.480042
offset_right = -0.0800171
offset_bottom = -358.0
grow_vertical = 2
color = Color(0.0862745, 0.196078, 0.282353, 1)

[node name="SpeakerBox" type="PanelContainer" parent="SpeakerBackground"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 660.0
offset_bottom = 122.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4rbby")

[node name="MarginContainer" type="MarginContainer" parent="SpeakerBackground/SpeakerBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="SpeakerBackground/SpeakerBox/MarginContainer"]
custom_minimum_size = Vector2(640, 88)
layout_mode = 2
text = "Some Speaker"
label_settings = SubResource("LabelSettings_cixbq")
horizontal_alignment = 1
autowrap_mode = 3

[node name="TextBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.360046
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0862745, 0.196078, 0.282353, 1)

[node name="TextBox" type="PanelContainer" parent="TextBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -560.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_shr43")

[node name="MarginContainer" type="MarginContainer" parent="TextBackground/TextBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="TextBackground/TextBox/MarginContainer"]
custom_minimum_size = Vector2(1340, 90)
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_cixbq")
autowrap_mode = 3
justification_flags = 131

[node name="ButtonContainer" type="VBoxContainer" parent="TextBackground"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -560.0
offset_top = -180.0
offset_bottom = 180.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1
